# ring-proof

./: .gitmodules  Cargo.toml  README.md  Specification.toml  specification_template.md
.github/workflows/: foundry.yml  rust.yml
common/: Cargo.toml
common/src/: domain.rs  fft.rs  lib.rs  piop.rs  prover.rs  setup.rs  test_helpers.rs  transcript.rs  verifier.rs
common/src/gadgets/: booleanity.rs  cond_add.rs  fixed_cells.rs  inner_prod.rs  inner_prod_pub.rs  mod.rs  powers_of_two_multiples.rs  sw_cond_add.rs  te_cond_add.rs
common/src/gadgets/ec/: mod.rs  sw_cond_add.rs  te_cond_add.rs
evm-vrfier/: Cargo.toml  build.rs
evm-vrfier/contracts/: foundry.toml
evm-vrfier/contracts/src/: BlsGenerators.sol  Constraints.sol  Kzg.sol  Plonk.sol  PlonkKzg.sol  SoladyBls.sol
evm-vrfier/contracts/test/: Constraints.t.sol  Kzg.t.sol  PlonkKzg.t.sol  SoladyBls.t.sol
evm-vrfier/src/: constraints.rs  lib.rs  plonk_kzg.rs  plonk_test.rs  test_constraints.rs  test_kzg.rs  test_plonk.rs
ring/: Cargo.toml
ring-proof/: Cargo.toml
ring-proof/src/: README.md  ring.rs  ring_prover.rs  ring_verifier.rs
ring-proof/src/piop/: params.rs  prover.rs
ring/benches/: kzg_vs_horner.rs
ring/src/: lib.rs  ring.rs  ring_prover.rs  ring_verifier.rs  transcript.rs  vrf.rs
ring/src/piop/: lagrange.rs  mod.rs  params.rs  prover.rs  verifier.rs
snarkified-ring-vrf/: Cargo.toml
snarkified-ring-vrf/src/: lib.rs  ring_vrf.rs  ring_vrf_prover.rs  ring_vrf_verifier.rs
snarkified-ring-vrf/src/piop/: mod.rs  params.rs  prover.rs
spec/: specification.md
w3f-plonk-common/: Cargo.toml  README.md
w3f-plonk-common/src/: domain.rs  lib.rs  piop.rs  prover.rs  setup.rs  test_helpers.rs  transcript.rs  verifier.rs
w3f-plonk-common/src/gadgets/: booleanity.rs  column_sum.rs  fixed_cells.rs  inner_prod.rs  mod.rs  powers_of_two_multiples.rs  sw_cond_add.rs
w3f-plonk-common/src/gadgets/ec/: mod.rs  powers_of_two_multiples.rs  sw_cond_add.rs  te_cond_add.rs  te_doubling.rs
w3f-ring-proof/: Cargo.toml  README.md
w3f-ring-proof/src/: lib.rs  ring.rs  ring_prover.rs  ring_verifier.rs
w3f-ring-proof/src/piop/: mod.rs  params.rs  prover.rs  verifier.rs
w3f-ring-vrf-snark/: Cargo.toml
w3f-ring-vrf-snark/src/: lib.rs  ring_vrf.rs  ring_vrf_prover.rs  ring_vrf_verifier.rs
w3f-ring-vrf-snark/src/piop/: cell_equality.rs  mod.rs  params.rs  prover.rs  verifier.rs
