[workspace]
resolver = "2"
members = [
    "w3f-plonk-common",
    "ring-proof",
    "snarkified-ring-vrf",
]

[workspace.dependencies]
ark-std = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
ark-poly = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false, features = ["derive"] }
fflonk = { git = "https://github.com/w3f/fflonk", default-features = false }
rayon = { version = "1", default-features = false }
