[workspace]
resolver = "2"
members = [
    "evm-vrfier",
    "w3f-plonk-common",
    "w3f-ring-proof",
    "w3f-ring-vrf-snark",
]
default-members = [
    "w3f-plonk-common",
    "w3f-ring-proof",
    "w3f-ring-vrf-snark",
]

[workspace.dependencies]
ark-std = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
ark-poly = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false, features = ["derive"] }
w3f-pcs = { git = "https://github.com/w3f/fflonk", default-features = false }
rayon = { version = "1", default-features = false }
