[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["Sergey Vasilyev <swasilyev@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Infrastructure for creating plonk-like proofs"
keywords = ["crypto", "cryptography", "plonk"]

[dependencies]
ark-std.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-poly.workspace = true
ark-serialize.workspace = true
fflonk.workspace = true
merlin.workspace = true
rayon = { workspace = true, optional = true }

[dev-dependencies]
ark-ed-on-bls12-381-bandersnatch = { version = "0.4", default-features = false }

[features]
default = []
std = ["ark-std/std", "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-serialize/std"]
parallel = ["std", "rayon", "ark-std/parallel", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel"]
print-trace = ["ark-std/print-trace"]

