[package]
name = "evm-vrfier"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.14", default-features = false, features = ["contract", "provider-anvil-node"] }
ark-ff = { workspace = true }
ark-bls12-381 = { version = "0.5", default-features = false, features = ["curve"] }
ark-ed-on-bls12-381-bandersnatch = { version = "0.5", default-features = false }

[dev-dependencies]
tokio = { version = "1.44", default-features = false }
ark-std = { workspace = true }
ark-ec = { workspace = true }
w3f-plonk-common = { path = "../w3f-plonk-common", default-features = false , features = ["std"]}
w3f-pcs = { workspace = true }

[build-dependencies]
foundry-config = { git = "https://github.com/foundry-rs/foundry" }