
[package]
name = "ring"
version = "0.1.0"
edition = "2021"
authors = ["Sergey Vasilyev <swasilyev@gmail.com>"]
license = "MIT/Apache-2.0"
description = "zk-proof of knowledge of the blinding factor for a Pedersen commitment"
keywords = ["crypto", "cryptography", "zk-proof"]

[dependencies]
ark-std.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-poly.workspace = true
ark-serialize.workspace = true
fflonk.workspace = true
rayon = { workspace = true, optional = true }
common = { path = "../w3f-plonk-common", default-features = false }
arrayvec = { version = "0.7", default-features = false }
ark-transcript = { version = "0.0.2", default-features = false }

[dev-dependencies]
ark-bls12-381 = { version = "0.4", default-features = false, features = ["curve"] }
ark-ed-on-bls12-381-bandersnatch = { version = "0.4", default-features = false }

[features]
default = [ "std" ]
std = [
  "ark-std/std",
  "ark-ff/std",
  "ark-ec/std",
  "ark-poly/std",
  "ark-serialize/std",
  "fflonk/std",
  "common/std"
]
parallel = [
  "std",
  "rayon",
  "ark-std/parallel",
  "ark-ff/parallel",
  "ark-ec/parallel",
  "ark-poly/parallel",
  "common/parallel",
  "fflonk/parallel"
]
print-trace = [
  "ark-std/print-trace",
  "common/print-trace"
]
asm = [ "fflonk/asm" ]
test-vectors = [ "common/test-vectors" ]
# benchmarking by running many proofs and verifications to get more accurate timing comparison
intensive-benchmarking = ["std"] 
