[package]
name = "ring"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = { git = "https://github.com/arkworks-rs/std", default-features = false }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false, rev = "402e7f9" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false, rev = "402e7f9" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false, rev = "402e7f9" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = ["derive"], rev = "402e7f9" }
fflonk = { git = "https://github.com/w3f/fflonk" }
common = { path = "../common" }
rayon = { version = "1", optional = true }
merlin = "3.0"

[features]
default = []
std = ["ark-std/std", "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-serialize/std"]
parallel = ["std", "ark-std/parallel", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", "common/parallel", "rayon"]
print-trace = ["ark-std/print-trace"]

[dev-dependencies]
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["curve"] }
ark-ed-on-bls12-381-bandersnatch = { git = "https://github.com/arkworks-rs/curves", default-features = false }
