[package]
name = "ring"
version = "0.1.0"
edition = "2021"
authors = ["Sergey Vasilyev <swasilyev@gmail.com>"]
license = "MIT/Apache-2.0"
description = "zk-proof of knowledge of the blinding factor for a Pedersen commitment"
keywords = ["cryptography", "ring-vrf"]

[dependencies]
ark-std.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-poly.workspace = true
ark-serialize.workspace = true
fflonk.workspace = true
rayon = { workspace = true, optional = true }
common = { path = "../common", default-features = false }
blake2 = { version = "0.10", default-features = false }
arrayvec = { version = "0.7", default-features = false }
ark-transcript = { git = "https://github.com/w3f/ark-transcript", default-features = false }

[dev-dependencies]
ark-bls12-381 = { version = "0.5", default-features = false, features = ["curve"] }
ark-ed-on-bls12-381-bandersnatch = { version = "0.5", default-features = false }

[features]
default = [ "std" ]
std = [
  "ark-std/std",
  "ark-ff/std",
  "ark-ec/std",
  "ark-poly/std",
  "ark-serialize/std",
  "fflonk/std",
  "common/std"
]
parallel = [
  "std",
  "rayon",
  "ark-std/parallel",
  "ark-ff/parallel",
  "ark-ec/parallel",
  "ark-poly/parallel",
  "common/parallel",
  "fflonk/parallel"
]
print-trace = [
  "ark-std/print-trace",
  "common/print-trace"
]
asm = [ "fflonk/asm" ]
