[package]
name = "w3f-plonk-common"
version = "0.0.1"
edition = "2021"
authors = ["Sergey Vasilyev <swasilyev@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Infrastructure for creating plonk-like proofs"
keywords = ["cryptography", "plonk"]

[dependencies]
ark-std.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-poly.workspace = true
ark-serialize.workspace = true
w3f-pcs.workspace = true
rayon = { workspace = true, optional = true }
getrandom_or_panic = { version = "0.0.3", default-features = false }
rand_core = "0.6"

[dev-dependencies]
ark-ed-on-bls12-381-bandersnatch = { version = "0.5", default-features = false }

[features]
default = ["std"]
std = [
  "ark-std/std",
  "ark-ff/std",
  "ark-ec/std",
  "ark-poly/std",
  "ark-serialize/std",
  "w3f-pcs/std",
  "getrandom_or_panic/std",
  "rand_core/std",
]
parallel = [
  "std",
  "rayon",
  "ark-std/parallel",
  "ark-ff/parallel",
  "ark-ec/parallel",
  "ark-poly/parallel",
  "w3f-pcs/parallel",
]
print-trace = ["ark-std/print-trace"]
asm = ["w3f-pcs/asm"]
