[package]
name = "w3f-ring-proof"
version = "0.0.2"
edition = "2021"
authors = ["Sergey Vasilyev <swasilyev@gmail.com>"]
license = "MIT/Apache-2.0"
description = "zk-proof of knowledge of the blinding factor for a Pedersen commitment"
keywords = ["cryptography", "ring-vrf"]
repository = "https://github.com/w3f/ring-proof"

[dependencies]
ark-std.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-poly.workspace = true
ark-serialize.workspace = true
w3f-pcs.workspace = true
rayon = { workspace = true, optional = true }
w3f-plonk-common = { path="../w3f-plonk-common", default-features = false }
ark-transcript = { version = "0.0.3", default-features = false }

[dev-dependencies]
ark-bls12-381 = { version = "0.5", default-features = false, features = ["curve"] }
ark-ed-on-bls12-381-bandersnatch = { version = "0.5", default-features = false }

[features]
default = [ "std" ]
std = [
  "ark-std/std",
  "ark-ff/std",
  "ark-ec/std",
  "ark-poly/std",
  "ark-serialize/std",
  "w3f-pcs/std",
  "w3f-plonk-common/std"
]
parallel = [
  "std",
  "rayon",
  "ark-std/parallel",
  "ark-ff/parallel",
  "ark-ec/parallel",
  "ark-poly/parallel",
  "w3f-plonk-common/parallel",
  "w3f-pcs/parallel"
]
print-trace = [
  "ark-std/print-trace",
  "w3f-plonk-common/print-trace"
]
asm = [ "w3f-pcs/asm" ]
test-vectors = [ "w3f-plonk-common/test-vectors" ]
